--- a/SetupDeveloperEnv.yaml
+++ b/SetupDeveloperEnv.yaml
@@ -140,6 +140,7 @@ vscodeExtensions:
   - github.copilot
   - github.copilot-chat
   - idered.npm
+  - ms-azuretools.vscode-azurefunctions
   - ms-azuretools.vscode-bicep
   - ms-azuretools.vscode-docker
   - ms-dotnettools.csdevkit
