--- a/SetupDeveloperEnv.yaml
+++ b/SetupDeveloperEnv.yaml
@@ -37,13 +37,7 @@ applications:
     installer: "nodejs.msi"
     programCheck: "nodejs\\node.exe"
     commandCheck: node
-
-  #- name: Python
-  #  group: "Development"
-  #  url: "https://www.python.org/ftp/python/3.13.7/python-3.13.7-amd64.exe"
-  #  silentArguments: "/quiet InstallAllUsers=1 PrependPath=1"
-  #  programCheck: "Python312\\python.exe"
-
+    
   - name: Python
     group: "Development"
     url: "https://www.python.org/ftp/python/3.11.9/python-3.11.9-amd64.exe"
@@ -52,14 +46,14 @@ applications:
 
   - name: Ruby
     group: "Development Workato"
-    url: "https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.2-1/rubyinstaller-devkit-3.4.2-1-x64.exe"
-    silentArguments: "/VERYSILENT /NORESTART /ALLUSERS /DIR=\"%ProgramFiles%\\Ruby\""
-    programCheck: "Ruby\\Ruby.exe"
-
+    url: "https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.3.9-1/rubyinstaller-devkit-3.3.9-1-x64.exe"
+    silentArguments: "/VERYSILENT /NORESTART /ALLUSERS"
+    programCheck: "C:\\Ruby33-x64\\bin\\ruby.exe"
+    environmentVariable: true
 
   - name: pgAdmin 4
     group: "Database"
-    url: "https://ftp.postgresql.org/pub/pgadmin/pgadmin4/v8.10/windows/pgadmin4-8.10-x64.exe"
+    url: "https://ftp.postgresql.org/pub/pgadmin/pgadmin4/v9.8/windows/pgadmin4-9.8-x64.exe"
     silentArguments: "/VERYSILENT /ALLUSERS"
     programCheck: "pgAdmin 4\\runtime\\pgAdmin4.exe"
 
@@ -137,12 +131,19 @@ applications:
     programCheck: "PowerShell\\7\\pwsh.exe"
     environmentVariable : true
   
-  - name: Promptflow
+  # - name: Promptflow
+  #  group: "Development AI"
+  #  url: "https://promptflowartifact.blob.core.windows.net/msi-installer/promptflow-1.14.0.msi"
+  #  installer: "Promptflow.msi"
+  #  programCheck: "Apps\\promptflow\\pfcli.exe"
+  #  environmentVariable : true
+
+  - name: Cursor
     group: "Development AI"
-    url: "https://promptflowartifact.blob.core.windows.net/msi-installer/promptflow-1.14.0.msi"
-    installer: "Promptflow.msi"
-    programCheck: "Apps\\promptflow\\pfcli.exe"
-    environmentVariable : true
+    url: "https://api2.cursor.sh/updates/download/golden/win32-x64/cursor/1.7"
+    silentArguments: "/SILENT"
+    programCheck: "cursor\\Cursor.exe"
+ 
 
 vscodeExtensions:
   - davidanson.vscode-markdownlint
