Update Cursor download URL in SetupDeveloperEnv.yaml to point to the latest version. This change ensures that developers receive the most up-to-date application during the onboarding process, improving the overall setup experience.

--- a/SetupDeveloperEnv.yaml
+++ b/SetupDeveloperEnv.yaml
@@ -140,7 +140,7 @@ applications:
 
   - name: Cursor
     group: "Development"
-    url: "https://api2.cursor.sh/updates/download/golden/win32-x64/cursor/2.0"
+    url: "https://api2.cursor.sh/updates/download/golden/win32-x64/cursor/latest"
     silentArguments: "/SILENT"
     programCheck: "cursor\\Cursor.exe"
  
