Refactor onboarding documentation and script for improved clarity and consistency. Updated DEVELOPER.MD to streamline Windows and macOS onboarding processes, emphasizing SSH onboarding methods. Removed RDP-only mode from the script parameters in OnboardDeveloper.ps1, simplifying the onboarding flow. Adjusted SetupDeveloperEnv.yaml to correct the program check path for Visual Studio Code, ensuring accurate installation checks. These changes enhance the overall developer experience during setup.

--- a/SetupDeveloperEnv.yaml
+++ b/SetupDeveloperEnv.yaml
@@ -28,7 +28,7 @@ applications:
     install: true
     url: "https://update.code.visualstudio.com/latest/win32-x64/stable"
     silentArguments: "/VERYSILENT /MERGETASKS=!runcode"
-    programCheck: "Programs\\Microsoft VS Code\\Code.exe"
+    programCheck: "Microsoft VS Code\\Code.exe"
     commandCheck: code
 
   - name: Node.js
